[tool.poetry]
name = "arch-security-tracker"
version = "0.12"
description = ""
authors = ["Levente Polyak"]
license = "MIT"
packages = [
  { include = "tracker" },
  { include = "migrations" },
]
scripts.trackerctl = "tracker.cli:cli.main"
include = ["config/00-default.conf"]


[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
Flask-Login = "^0.6.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
Flask-WTF = "^1.0.1"
flask-talisman = "^1.0.0"
email-validator = "^1.2.1"
requests = "^2.27.1"
scrypt = "^0.8.20"
SQLAlchemy-Continuum = "^1.3.12"
feedgen = "^0.9.0"
pytz = "^2022.1"
Authlib = "^1.0.1"
MarkupSafe = "^2.1.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
